--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<img src="dd" alt="" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello, GIT</title>
+</head>
+<body>
+    GIT !
+</body>
+</html>
